--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xo-core"
-version = "0.1.0"
+version = "0.1.0-alpha"
 edition = "2024"
 rust-version = "1.88"
 authors = ["Allie72phe <alliephenish@gmail.com>"]
